# Recipe-Caboodle

./: .env  .env.example  .gitignore  README.md  build.sh  build_files.sh  pyproject.toml  vercel.json
config/: settings.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  development.py  production.py
recipe/: permissions.py  serializers.py  urls.py  views.py
recipe/migrations/: 0001_initial.py  0002_initial.py
recipe/tests/: test_models.py
users/: authenticate.py  forms.py  managers.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py
