[tool.poetry]
name = "recipe-api"
version = "0.1.0"
description = ""
authors = ["alextamboli <alex.tamboli8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
