[tool.poetry]
name = "recipe-api"
version = "0.1.0"
description = ""
authors = ["alextamboli <alex.tamboli8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.9"
whitenoise = "^6.6.0"
django-cors-headers = "^4.3.1"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.0"
django-filter = "^23.4"
drf-spectacular = "^0.26.5"
django-rest-passwordreset = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
