[tool.poetry]
name = "recipe-api"
version = "0.1.0"
description = ""
authors = ["alextamboli <alex.tamboli8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.9"
whitenoise = "^6.6.0"
django-cors-headers = "^4.3.1"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.0"
django-filter = "^23.4"
drf-spectacular = "^0.26.5"
django-rest-passwordreset = "^1.3.0"
pillow = "^10.1.0"
factory-boy = "^3.3.0"
django-cloudinary-storage = "^0.3.0"
cloudinary = "^1.37.0"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-django = "^4.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
